--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="chapter">
 <div class="titlepage"><div>
 <div><h2 class="title">
-<a name="dll"></a>Chapter&#160;1.&#160;Boost.DLL</h2></div>
+<a name="boost_dll"></a>Chapter&#160;1.&#160;Boost.DLL</h2></div>
 <div><div class="author"><h3 class="author">
 <span class="firstname">Renato</span> <span class="surname">Forti</span>
 </h3></div></div>
@@ -31,7 +31,7 @@
 <div><p class="copyright">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin</p></div>
 <div><p class="copyright">Copyright &#169; 2015 Antony Polukhin</p></div>
 <div><div class="legalnotice">
-<a name="dll.legal"></a><p>
+<a name="boost_dll.legal"></a><p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
@@ -62,10 +62,10 @@
 <dt><span class="section"><a href="boost_dll/tutorial.html#boost_dll.tutorial.importing_a_c_function_from_windows_dll">Importing
       a C function from Windows dll</a></span></dt>
 </dl></dd>
-<dt><span class="section"><a href="dll/reference.html">Reference</a></span></dt>
+<dt><span class="section"><a href="boost_dll/reference.html">Reference</a></span></dt>
 <dd><dl>
-<dt><span class="section"><a href="dll/reference.html#shared_library_reference">Shared Library Reference</a></span></dt>
-<dt><span class="section"><a href="dll/reference.html#shared_library_refcountable_reference">Shared Library Refcountable Reference</a></span></dt>
+<dt><span class="section"><a href="boost_dll/reference.html#shared_library_reference">Shared Library Reference</a></span></dt>
+<dt><span class="section"><a href="boost_dll/reference.html#shared_library_refcountable_reference">Shared Library Refcountable Reference</a></span></dt>
 </dl></dd>
 <dt><span class="section"><a href="boost_dll/limitations.html">Limitations</a></span></dt>
 <dd><dl><dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.mingw">MinGW</a></span></dt></dl></dd>
@@ -126,7 +126,7 @@
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
-<td align="left"><p><small>Last revised: August 22, 2015 at 08:55:21 GMT</small></p></td>
+<td align="left"><p><small>Last revised: August 22, 2015 at 09:12:07 GMT</small></p></td>
 <td align="right"><div class="copyright-footer"></div></td>
 </tr></table>
 <hr>
